crates/analyzer/tests/snapshots/errors__emit_type_name.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `emit` expects an event
  ┌─ [snippet]:3:8
  │
3 │   emit u8()
  │        ^^ `u8` is a type name; expected an event


